--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <script> 
       var a= document.querySelector("a");
       a.addEventListener('click',function(){
-        document.querySelector("h1").innerHTML("A qué esperas para hacernos ricos?");
+        var h1= document.querySelector("h1");
+        h1.innerHTML="A qué esperas para hacernos ricos?";
       });
     </script>
   
