--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         var h1= document.querySelector("h1");
         h1.innerHTML="A qué esperas para hacernos ricos?";
       });
+      
+       var opciones="toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=yes,width=300,height=300,top=85,left=140";
+       window.open('popup_ejemplo.html','',opciones);
+        </script>
     </script>
   
   </body>
